--- a/KD4/KD4/KD4.csproj
+++ b/KD4/KD4/KD4.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Failai\**" />
+    <EmbeddedResource Remove="Failai\**" />
+    <None Remove="Failai\**" />
+  </ItemGroup>
+
 </Project>
